# checkthat-ai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
checkthat_ai/: _client.py  _types.py
checkthat_ai/resources/chat/completions/: completions.py
checkthat_ai/types/chat/: __init__.py  completions.py
python sdk/: README.md  async_client.py  client.py  pyproject.toml  setup.py
