[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkthat-ai"
version = "0.1.0"
authors = [
  { name="CheckThat AI", email="kadapalanikhil@gmail.com" },
]
description = "A Python SDK for the CheckThat AI(checkthat-ai.com) platform's claim normalization and fact-checking API."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "httpx>=0.23.0,<1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/nikhil-kadapala/checkthat-ai"
"Bug Tracker" = "https://github.com/nikhil-kadapala/checkthat-ai/issues"
